[package]
name = "thesis-rust"
version = "0.1.0"
authors = ["Jonathan Matsson <jmatss@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.6.1"
rayon = "1.2.0"
crossbeam-utils = "0.6"
crossbeam-channel = "0.3"
num_cpus = "1.11"
clap = "2.33"