[package]
name = "thesis-rust"
version = "0.1.0"
authors = ["Jonathan Matsson <jmatss@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7"
rayon = "1.3"
crossbeam-utils = "0.7"
crossbeam-channel = "0.4"
num_cpus = "1.13"
clap = "2.33"